# GGchem

./: .bumpversion.cfg  .gitignore  README.md  fatal.case  meson.build  pyproject.toml  setup.py
.github/workflows/: build.yml
build_tools/: build_sdist.sh  openblas_support.py  test_sdist.sh
build_tools/build_wheels/: cibw_before_build_linux.sh  cibw_before_build_macos.sh  cibw_before_build_win.sh  publish_cirrus.sh
glue/: fort_ggchem.pyf  fort_ggchem.pyf.old  init_dustchem_taurex.f  taurex_glue.f90
input/: model_standard_eqcond.in
src16/: .bumpversion.cfg  equil_cond.f  init_dustchem.f  smchem16.f  smchem8.f  supersat.f
taurex_ggchem/: .f2py_f2cmap  __init__.py  meson.build  test.py
taurex_ggchem/chemistry/: ggchemistry.py  ggchemistry_safe.py
taurex_ggchem/glue/: datamod.f90  init_dustchem_taurex.f  taurex_glue.f90  taurex_glue.pyf
tests/: test_ggchem.py
