[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.17.1",
    "wheel",
    "oldest-supported-numpy",
    "numpy>=1.25.0,<2.0; python_version>='3.9'",
]

[project]
name = "taurex_ggchem"
description = "Taurex Python wrapper for the FORTRAN GGChem code."
dependencies = [
    "numpy>=1.25.0,<2.0",
    "taurex>=3.1.13",
]
version="1.0.4"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Ahmed F. Al-Refaie", email = "ahmed.al-refaie.12@ucl.ac.uk"},
]
maintainers = [
    {name = "Ahmed F. Al-Refaie", email = "ahmed.al-refaie.12@ucl.ac.uk"},
]
keywords = [
    "taurex",
    "taurex3",
    "exoplanet",
    "exoplanets",
    "transmission",
    "spectroscopy",
    "atmospheres",
    "atmosphere",
    "chemistry",
    'equilibrium-chemistry',
    'chemistry-solver',
    'chemistry-equilibrium',
    'chemistry-equilibrium-solver',
    'fortran',
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Fortran",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
package = "taurex_ggchem"

[project.urls]
source = "https://github.com/ucl-exoplanets/GGchem"

[project.entry-points."taurex.plugins"]
ggchem = "taurex_ggchem"